# permitlayer

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  dist-workspace.toml  tokens.json  workflow-20260606-epic11.md
crates/permitlayer-connectors/: Cargo.toml
crates/permitlayer-connectors/src/: def.rs  error.rs  lib.rs  registry.rs  validate.rs
crates/permitlayer-connectors/src/defs/: google-calendar.toml  google-drive.toml  google-gmail.toml
crates/permitlayer-core/: Cargo.toml
crates/permitlayer-core/benches/: policy_bench.rs  scrub_bench.rs
crates/permitlayer-core/src/: error.rs  files.rs  lib.rs  paths.rs
crates/permitlayer-core/src/agent/: identity.rs  mod.rs  registry.rs
crates/permitlayer-core/src/audit/: dispatcher.rs  event.rs  mod.rs  reader.rs  schema.rs  writer.rs
crates/permitlayer-core/src/killswitch/: mod.rs
crates/permitlayer-core/src/policy/: compile.rs  edit.rs  error.rs  eval.rs  mod.rs  schema.rs
crates/permitlayer-core/src/scrub/: engine.rs  error.rs  mod.rs  placeholder.rs  rule.rs
crates/permitlayer-core/src/store/: binding.rs  connection.rs  error.rs  mod.rs  test_seams.rs  validate.rs
crates/permitlayer-core/src/vault/: lock.rs
crates/permitlayer-core/tests/: README.md  kill9_recovery.rs  vault_lock_conformance.rs
crates/permitlayer-core/tests/integration/: audit_fs.rs  compile_fail.rs  mod.rs  policy_fixtures.rs  scrub_builtin_rules.rs  scrub_concurrency.rs
crates/permitlayer-credential/: Cargo.toml
crates/permitlayer-credential/src/: agent_bearer.rs  connection.rs  error.rs  lib.rs  oauth_token.rs  sealed.rs
crates/permitlayer-daemon/: Cargo.toml  build.rs
crates/permitlayer-daemon/src/: approval.rs  conn_shim.rs  main.rs
crates/permitlayer-daemon/src/cli/: agent.rs  atomic_write.rs  audit.rs  audit_anomaly.rs  audit_export.rs  audit_follow.rs  auto_rekey.rs  autostart.rs  bind.rs  config.rs  connect.rs  connect_uds.rs  connection.rs  credentials.rs  default_policy.toml  kill.rs  logs.rs  mod.rs  oauth_render.rs  oauth_seal.rs  openclaw.rs  policy.rs  quickstart.rs  release_verify.rs  reload.rs  resume.rs  root_guard.rs  scrub.rs  setup.rs  start.rs  status.rs  stop.rs
crates/permitlayer-daemon/src/config/: mod.rs  schema.rs
crates/permitlayer-daemon/src/design/: format.rs  generated_tokens.rs  kill_banner.rs  mod.rs  render.rs  scrub_inline.rs  terminal.rs  theme.rs
crates/permitlayer-daemon/src/lifecycle/: control_token.rs  mod.rs  pid.rs
crates/permitlayer-daemon/src/repair/: archive.rs  fs_repair.rs  journal.rs  mod.rs  prompt.rs  retry.rs  sudo.rs  wipe.rs
crates/permitlayer-daemon/src/server/: agent_token.rs  conn_tracker.rs  control.rs  control_listener.rs  mod.rs  shutdown.rs  sighup.rs
crates/permitlayer-daemon/src/telemetry/: filter.rs  mod.rs
crates/permitlayer-daemon/tests/: README.md
crates/permitlayer-daemon/tests/common/: mod.rs
crates/permitlayer-daemon/tests/integration/: agent_rebind_e2e.rs  agent_register_scripted.rs  agent_registry_e2e.rs  agent_rotate_e2e.rs  approval_prompt_e2e.rs  audit_drain_on_shutdown_e2e.rs  audit_export_e2e.rs  audit_follow.rs  audit_query_e2e.rs  bind_e2e.rs  clean_install_v2_guard.rs  config_theme.rs  connect_e2e.rs  connection_e2e.rs  connectors_list_e2e.rs  connectors_new_e2e.rs  connectors_test_e2e.rs  control_token_e2e.rs  credentials_refresh_daemon_conflict.rs  credentials_status.rs  daemon_lifecycle.rs  device_flow_e2e.rs  doctor_e2e.rs  envelope_v1_to_v2_e2e.rs  kill_resume_e2e.rs  kill_switch_e2e.rs  logs_audit_isolation_e2e.rs  logs_command_e2e.rs  master_key_bootstrap_e2e.rs  mod.rs  multi_account_e2e.rs  plugin_loader_e2e.rs  policy_compile_startup.rs  policy_enforcement_e2e.rs  policy_reload_e2e.rs  policy_validate_e2e.rs  quickstart_e2e.rs  rotate_key_crash_resume_e2e.rs  rotate_key_e2e.rs  scope_merge_managed_only_e2e.rs  (+8 more)
crates/permitlayer-keystore/: Cargo.toml
crates/permitlayer-keystore/src/: codesign_macos.rs  error.rs  fallback.rs  file_backed.rs  keyring_shared.rs  lib.rs  linux.rs  macos.rs  passphrase.rs  windows.rs
crates/permitlayer-keystore/tests/: conformance.rs
crates/permitlayer-oauth/: Cargo.toml
crates/permitlayer-oauth/src/: callback.rs  client.rs  error.rs  headless.rs  lib.rs  metadata.rs  osc52.rs  pkce.rs  refresh.rs
crates/permitlayer-oauth/src/google/: consent.rs  device_flow.rs  mod.rs  scopes.rs  verify.rs
crates/permitlayer-oauth/tests/: README.md
crates/permitlayer-oauth/tests/integration/: google_consent.rs  mod.rs  oauth_flow.rs  setup_wizard.rs
crates/permitlayer-platform-macos/: Cargo.toml
crates/permitlayer-platform-macos/src/: fs_safe.rs  lib.rs  peer_cred.rs  rename_excl.rs
crates/permitlayer-plugins/: Cargo.toml
crates/permitlayer-plugins/src/: error.rs  lib.rs  loader.rs  registry.rs  runtime.rs  sandbox.rs  scope_allowlist.rs
crates/permitlayer-plugins/src/host_api/: deprecated.rs  error_class.rs  http.rs  mod.rs  oauth.rs  policy.rs  scrub.rs  services.rs  stub_services.rs  version.rs
crates/permitlayer-plugins/tests/: README.md
crates/permitlayer-plugins/tests/integration/: deny_toml_allowlist_extended.rs  host_api_surface.rs  loader.rs  mod.rs  sandbox_escape.rs  scope_allowlist.rs  stub_services.rs
crates/permitlayer-proxy/: Cargo.toml
crates/permitlayer-proxy/src/: binding_resolve.rs  error.rs  lib.rs  refresh_flow.rs  request.rs  response.rs  service.rs  token.rs
crates/permitlayer-proxy/src/middleware/: agent_identity.rs  approval.rs  audit.rs  auth.rs  kill.rs  (+6 more)
crates/permitlayer-proxy/tests/: README.md
crates/permitlayer-vault/: Cargo.toml
crates/permitlayer-vault/src/: error.rs  lib.rs  rotation.rs  seal.rs
crates/permitlayer-vault/tests/: roundtrip_proptest.rs
xtask/: Cargo.toml
xtask/src/: bench_check.rs  check_test_registrations.rs  contrast.rs  main.rs  release.rs  scrub_corpus.rs
xtask/src/bench_check/: baselines.toml
xtask/src/validate_credentials/: mod.rs  tests.rs
xtask/src/validate_plugin_api/: lockfile.rs  mod.rs  surface.rs  tests.rs
xtask/tests/: plugin_api_check.rs
(+212 files in other folders)
