[workspace]
resolver = "3"
members = [
    "crates/permitlayer-credential",
    "crates/permitlayer-keystore",
    "crates/permitlayer-vault",
    "crates/permitlayer-core",
    "crates/permitlayer-oauth",
    "crates/permitlayer-proxy",
    "crates/permitlayer-plugins",
    "crates/permitlayer-connectors",
    "crates/permitlayer-daemon",
    "xtask",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.94.1"
license = "MIT"
repository = "https://github.com/permitlayer/permitlayer"
homepage = "https://github.com/permitlayer/permitlayer"
readme = "README.md"
description = "Open-core identity and data-protection layer for AI agents"
keywords = ["mcp", "oauth", "agent", "identity", "google-workspace"]
categories = ["authentication", "command-line-utilities"]
authors = ["permitlayer contributors"]

[workspace.dependencies]
# Caret-to-minor pinning per Story 1.1 AC #2: allows patch-level upgrades
# automatically while `Cargo.lock` still pins exact versions for
# reproducibility and `cargo audit`/`cargo deny` gate on the locked set.

# Credential type discipline
zeroize = { version = "1.8", features = ["zeroize_derive"] }
thiserror = "2.0"
static_assertions = "1.1"
serde = "1.0"                     # dev-only in credential crate: assert_not_impl_any! needs the trait path

# CLI entry point
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"

# xtask validator — syn-based Rust AST walking
walkdir = "2.5"
syn = { version = "2.0", features = ["full"] }
# `quote` is already in the graph transitively via syn; we add it as
# an explicit xtask dep so Story 6.5's `validate-plugin-api` can use
# `quote!{}` to render `syn::Type` / `syn::Signature` back to source
# text for the `host-api.lock` snapshot.
quote = "1.0"

# Filesystem watcher (Story 5.2 — `agentsso audit --follow` replaces the
# Story 1.9 250ms polling stub with inotify/FSEvents/ReadDirectoryChangesW).
# Pinned to the 8.x stable line; 9.0 is currently RC and following the
# workspace convention of avoiding pre-release crypto/infra primitives
# until the stable release lands.
notify = "8.2"

# Async runtime + keystore (Story 1.2); signal, fs, net added in Story 1.4
tokio = { version = "1.51", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "test-util", "signal", "fs", "net", "io-util"] }
keyring = { version = "3.6", features = ["apple-native", "linux-native-sync-persistent", "windows-native"] }
argon2 = { version = "0.5", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
rpassword = "7.3"
async-trait = "0.1"
tempfile = "3.14"

# Vault crypto stack (Story 1.3)
#
# Pinned to the `digest 0.10` generation of the RustCrypto ecosystem:
#   sha2 0.10 + hmac 0.12 + hkdf 0.12 + aes-gcm 0.10 + argon2 0.5
#
# architecture.md §Cryptography stack pins hkdf 0.13, but hkdf 0.13
# requires `digest 0.11`, which forces sha2 → 0.11, hmac → 0.13, and
# aes-gcm → 0.11. As of 2026-04-05 `aes-gcm 0.11` and `argon2 0.6` are
# both release candidates (`0.11.0-rc.3`, `0.6.0-rc.8`), not stable
# releases. Shipping RC crypto primitives in an MVP credential vault
# is a larger risk than a documented one-version drift from the arch
# doc. Revisit when aes-gcm 0.11 + argon2 0.6 reach stable — the
# upgrade is a single-PR swap (7 import lines across seal.rs +
# passphrase.rs; trait APIs are stable across the digest-generation
# bump).
aes-gcm = "0.10"
hkdf = "0.12"
subtle = "2.6"

# CSV writer for `agentsso audit --export=<path>.csv` (Story 5.3).
# RFC 4180 quoting/escaping is surprisingly subtle; using the dedicated
# crate instead of hand-rolling. 1.3 is the current stable line with no
# macOS-specific transitive gotchas.
csv = "1.3"

# OAuth 2.1 client (Story 1.6)
oauth2 = { version = "5.0", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate"] }
open = "5.0"
url = "2.5"

# Interactive CLI prompts (Story 1.8)
dialoguer = "0.11"
console = "0.15"
indicatif = "0.18"

# Terminal detection (Story 1.13)
crossterm = "0.28"
unicode-width = "0.2"

# Daemon lifecycle (Story 1.4)
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Daily-rotating file appender for operational logs (Story 5.4, FR81 + NFR45).
# Canonical Rust idiom for non-blocking file output via an internal worker
# thread + bounded crossbeam-channel queue. Transitives (parking_lot, time,
# crossbeam-channel) are already present via `notify` + `chrono-tz` etc., so
# the net new dependency surface is the appender crate itself.
tracing-appender = "0.2"
arc-swap = "1.7"
# Lock-free concurrent map for in-process per-agent connection state
# (FR83 active connections, Story 5.5). Replaces the alternative of an
# `Arc<RwLock<HashMap<_, _>>>` whose write-lock contention on the
# request-path middleware would dominate per-request overhead. DashMap's
# only non-trivial transitive dep is `parking_lot`, already present via
# `tracing-appender` (Story 5.4) and the axum/hyper stack.
dashmap = "6"
serde_json = "1.0"
chrono = "0.4"
axum = "0.8"
tower = "0.5"
tower-http = "0.6"
http-body-util = "0.1"
ulid = "1.1"
dirs = "6.0"
nix = { version = "0.29", features = ["signal", "process", "fs"] }

# MCP server SDK (Story 1.11)
rmcp = { version = "1.3", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.2"
hyper-util = "0.1"
urlencoding = "2.1"

# QuickJS-NG bindings for the connector plugin runtime (FR38-44, Epic 6,
# Story 6.1). "full" unlocks the standard Object/Function/Promise API we
# register host bindings on; "parallel" makes Runtime + Context Send-safe
# so `Arc<PluginRuntime>` can live in `AppState` across tokio tasks.
# Pinned to the 0.11 line per architecture.md:169 — DelSkayn's 0.11 on
# QuickJS-NG (Bellard's original is dormant).
#
# B4 review patch: features are `["full", "parallel"]` per AC #17 —
# NOT `"full-async"`. The `-async` superset pulls in async-lock,
# event-listener, loader intrinsic, and Promise microtask queue
# machinery that Story 6.1 does not use. Avoiding it minimizes the
# sandbox attack surface for the escape-test suite.
rquickjs = { version = "0.11", features = ["full", "parallel"] }

# Semver parsing — used by Story 6.2's host-API version test to
# assert `HOST_API_VERSION` is a parseable semver string. Pinned at
# the 1.x stable line; serde feature kept off (we only need parse).
semver = "1"

# Scrub engine (Story 2.1)
aho-corasick = "1.1"
regex = "1.12"

# Dev-only (Story 1.3)
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.6"
trybuild = "1.0"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
mockito = "1.7"
insta = { version = "1.41", features = ["json"] }

# The 'dist' profile is used by `cargo dist build` for release artifacts.
# Inherits from `release` and strips debuginfo for smaller binaries — the
# cargo-dist convention (emitted by `dist init`; added manually here in
# Story 7.1 because Story 1.12 shipped the tooling without running init).
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Note: unsafe_code is forbidden via #![forbid(unsafe_code)] at each crate root
# (except permitlayer-keystore, which needs FFI). Workspace-level `forbid` would
# block keystore's required exception, so we enforce per-crate instead.
