[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Custom build tasks for permitlayer. Not shipped."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
walkdir.workspace = true
syn.workspace = true
quote.workspace = true
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
permitlayer-core = { version = "0.3.0-rc.5", path = "../crates/permitlayer-core" }

[lints]
workspace = true
