[package]
name = "permitlayer-connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Built-in JS connectors (Gmail, Calendar, Drive) embedded as assets."

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
