[package]
name = "permitlayer-connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Built-in JS connectors (Gmail, Calendar, Drive) embedded as assets."

[dependencies]
thiserror.workspace = true
# Story 11.1: connector-definition typed model. `serde` (derive) for the
# TOML schema, `toml` for deserialization, `serde_json` for the per-tool
# MCP `input_schema` (arbitrary JSON held as a `Value`), `url` for the
# upstream `base_url`. The workspace pins `serde`/`url` without the
# `derive`/`serde` features, so they are enabled here at the call site.
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
serde_json.workspace = true
url = { workspace = true, features = ["serde"] }
# Story 11.3: connector registry. `arc-swap` for the hot-swappable
# registry (same pattern as permitlayer-plugins::PluginRegistry);
# `tracing` for skip-and-warn diagnostics on bad host-installed defs.
# The registry takes the connectors dir as a parameter so this crate
# stays free of permitlayer-core's path layout.
arc-swap.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
