[package]
name = "permitlayer-credential"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sealed credential types for permitlayer. Non-Debug, ZeroizeOnDrop. Leaf crate."

[dependencies]
zeroize.workspace = true
thiserror.workspace = true
static_assertions.workspace = true
# Story 11.8: deterministic ConnectionId::from_service_shim (a 11.8→11.9
# bridge). Third-party only — the leaf-crate rule forbids permitlayer-* deps,
# not crates.io crates.
sha2.workspace = true

[dev-dependencies]
# serde is used ONLY to name `serde::Serialize`/`serde::de::DeserializeOwned`
# in the compile-time assertion blocks. Not in the production compile graph.
serde.workspace = true

[lints]
workspace = true
