[package]
name = "permitlayer-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "agentsso binary: axum server, CLI, lifecycle management"

# Story 8.8b: collapse 23 `tests/*.rs` integration files into one
# binary. See tests/integration/mod.rs for submodules and
# tests/README.md for the rationale + new-test-file convention.
autotests = false

[[bin]]
name = "agentsso"
path = "src/main.rs"

[features]
# Story 7.6b round-2 re-triage: explicit feature flag for the
# in-binary test seams (file-backed keystore selection, crash-
# injection in rotate-key, AGENTSSO_TEST_MASTER_KEY_HEX +
# AGENTSSO_TEST_PASSPHRASE bootstrap shortcuts). Pre-round-2 these
# were gated by `cfg(debug_assertions)`, which was a build-PROFILE
# flag ŌĆö `cargo build` (dev profile) shipped them enabled even
# though the user had not opted in. The feature flag makes the
# seam-vs-production boundary an explicit Cargo metadata fact:
#
#   cargo build                   ŌåÆ seams compiled out
#   cargo build --release         ŌåÆ seams compiled out
#   cargo install                 ŌåÆ seams compiled out (does not
#                                   enable non-default features)
#   cargo test                    ŌåÆ seams compiled in (the
#                                   integration test target's
#                                   required-features triggers it
#                                   AND cargo unifies features
#                                   across the workspace per-build)
#
# Transitively enables `permitlayer-keystore/test-seam` so the
# `FileBackedKeyStore` and `PassphraseKeyStore::from_passphrase`
# constructors are visible.
test-seam = ["permitlayer-keystore/test-seam"]

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["test-seam"]

[dependencies]
permitlayer-proxy.workspace = true
permitlayer-oauth.workspace = true
permitlayer-vault.workspace = true
# Story 7.6b round-1 review: rotation read-back-verify uses
# `subtle::ConstantTimeEq` for the byte comparison. Not strictly
# required (rotation isn't in the auth hot path), but keeps the
# discipline uniform with the keystore-conformance code path.
subtle.workspace = true
# Story 7.6b round-2 review: marker tempfile + rotate-key-output
# tempfile use 64-bit OsRng suffixes for collision-resistance under
# create_new(true). Workspace already pulls rand transitively, but
# adding it as a direct dep keeps the daemon's dependency intent
# explicit.
rand.workspace = true
# Story 7.6b round-2 re-triage: `permitlayer-keystore`'s `test-seam`
# feature is now enabled ONLY when the daemon's own `test-seam`
# feature is enabled (see `[features]` below). Pre-round-2 it was
# enabled unconditionally ŌĆö that was harmless because the env-var
# read at `cli/start.rs::ensure_master_key_bootstrapped` was gated
# by `cfg(debug_assertions)`, but the feature flag is a clearer
# boundary than the build profile.
permitlayer-keystore.workspace = true
permitlayer-core.workspace = true
permitlayer-credential.workspace = true
permitlayer-plugins.workspace = true
# Story 6.2 AD2: the debug-only `/v1/debug/plugin-echo` handler
# drives JS-side Promise resolution via `Promise::finish`. Already
# compiled transitively via permitlayer-plugins, so adding it as
# a direct dep here adds zero C-code build cost ŌĆö it just makes
# `rquickjs::Value` and `rquickjs::String` directly nameable from
# the handler. The handler itself is gated by
# `#[cfg(debug_assertions)]` so release builds don't include the
# code path. (H19 re-review finding was about this dep ŌĆö we
# concluded the cost is already paid via the transitive dep.)
rquickjs.workspace = true
clap.workspace = true
anyhow.workspace = true
figment.workspace = true
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
arc-swap.workspace = true
dashmap.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
ulid.workspace = true
dirs.workspace = true
thiserror.workspace = true
chrono.workspace = true
tempfile.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
async-trait.workspace = true
hkdf.workspace = true
sha2.workspace = true
zeroize.workspace = true
reqwest.workspace = true
url.workspace = true
notify.workspace = true
csv.workspace = true
# Story 7.5 ŌĆö `agentsso update`. minisign-verify for ed25519 release
# signature verification (same `install/permitlayer.pub` key that
# install.sh + install.ps1 use); flate2 + tar for unpacking the
# `dist`-produced `.tar.gz` archives; semver for version comparison.
minisign-verify = { workspace = true }
flate2 = "1.0"
tar = { workspace = true }
semver = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix.workspace = true
# Story 7.6b round-2 review: rotation-state marker file uses
# `libc::O_NOFOLLOW` to refuse symlink-plant attacks at the marker
# path ŌĆö same discipline as `permitlayer-core::vault::lock`. Unix-
# only; the Windows path uses `OpenOptions` without the flag (no
# `O_NOFOLLOW` equivalent in the standard library, but Windows ACLs
# and the marker's parent-dir 0700 perms close the gap.)
libc = "0.2"
# Story 7.5 ŌĆö `rustix::fs::statvfs` for the disk-space pre-flight.
# POSIX-only; the Windows path uses a PowerShell shell-out fallback.
rustix = { workspace = true }

[build-dependencies]
serde_json.workspace = true

[dev-dependencies]
rmcp = { version = "1.3", features = ["client", "transport-streamable-http-client-reqwest"] }
insta = { workspace = true }
http-body-util.workspace = true
# Needed by the `FailingAuditStore` test fixture in `server::control::tests`
# to impl the `AuditStore` trait (which is defined via `#[async_trait]`).
async-trait.workspace = true
# Story 7.5 update_e2e ŌĆö mock GitHub Releases API for the in-place
# update flow's integration test.
mockito = { workspace = true }
# Story 7.5 review patch P22 (F26): test-only minisign signer for
# building the signed fixture archive served by the apply-flow
# integration test. Same trust-root family as `minisign-verify`
# (production-side dep at workspace level); zero impact on release
# builds since this is dev-deps only.
minisign = "0.9"

[lints]
workspace = true
