[package]
name = "permitlayer-keystore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OS keychain abstraction for permitlayer. Only crate permitted to use unsafe (platform FFI)."

[features]
test-seam = []

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros", "time"] }
keyring.workspace = true
argon2.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
rpassword.workspace = true
async-trait.workspace = true
zeroize.workspace = true
tempfile.workspace = true
subtle.workspace = true

# macOS-only: downcast `keyring::Error::PlatformFailure`'s boxed source
# to inspect the OSStatus and route ACL denials (-25308 / -25293) to
# `BackendUnavailable` so the existing auto-fallback path engages
# instead of hard-failing the keystore probe. Pinned to v3 to match the
# version keyring 3.6 boxes (downcast checks type identity, so v2 in
# our dep tree would silently miss).
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "macros", "time", "test-util"] }
walkdir.workspace = true

[[test]]
name = "conformance"
required-features = ["test-seam"]

[lints]
workspace = true
